[gd_scene load_steps=14 format=2]

[ext_resource path="res://Recursos/metal lord.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://script_login.gd" type="Script" id=2]
[ext_resource path="res://Recursos/Menu1.png" type="Texture" id=3]
[ext_resource path="res://Recursos/setas.png" type="Texture" id=4]
[ext_resource path="res://Recursos/enter.png" type="Texture" id=5]
[ext_resource path="res://Recursos/tab.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 1
outline_color = Color( 0.00784314, 0.00784314, 0.00784314, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=4]
resource_name = "criar"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Label2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Button:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "popErro"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.4, 0.6, 0.8, 1.8, 2, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 0.784314 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.784314 ), Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=7]
resource_name = "popErro2"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.4, 0.6, 0.8, 1.8, 2, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 0.784314 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.784314 ), Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Menu1" type="Sprite" parent="."]
position = Vector2( 514.149, 301.114 )
scale = Vector2( 0.536, 0.558 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="."]
margin_left = 472.0
margin_top = 64.0
margin_right = 552.0
margin_bottom = 103.0
custom_fonts/font = SubResource( 1 )
text = "Login"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="email" type="Label" parent="."]
margin_left = 320.0
margin_top = 152.0
margin_right = 414.0
margin_bottom = 191.0
custom_fonts/font = SubResource( 1 )
text = "Email:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="senha" type="Label" parent="."]
margin_left = 320.0
margin_top = 216.0
margin_right = 462.0
margin_bottom = 255.0
custom_fonts/font = SubResource( 1 )
text = "senha_tr"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtEmail" type="LineEdit" parent="."]
modulate = Color( 1, 1, 1, 0.670588 )
margin_left = 464.0
margin_top = 152.0
margin_right = 744.0
margin_bottom = 192.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtSenha" type="LineEdit" parent="."]
modulate = Color( 1, 1, 1, 0.670588 )
margin_left = 464.0
margin_top = 224.0
margin_right = 744.0
margin_bottom = 264.0
secret = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 424.0
margin_top = 312.0
margin_right = 597.0
margin_bottom = 357.0
custom_fonts/font = SubResource( 2 )
text = "entrar_tr"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Label2" type="Label" parent="."]
margin_left = 384.0
margin_top = 376.0
margin_right = 618.0
margin_bottom = 396.0
custom_fonts/font = SubResource( 3 )
text = "criar_conta_tr"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 184.0
margin_top = 568.0
margin_right = 208.0
margin_bottom = 588.0
custom_fonts/font = SubResource( 3 )
text = "ou_tr"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
margin_left = 224.0
margin_top = 568.0
margin_right = 402.0
margin_bottom = 588.0
custom_fonts/font = SubResource( 3 )
text = "navegar_tr"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="."]
margin_left = 480.0
margin_top = 568.0
margin_right = 563.0
margin_bottom = 588.0
custom_fonts/font = SubResource( 3 )
text = "sele_tr"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = 328.0
margin_top = 136.0
margin_right = 809.0
margin_bottom = 416.0
color = Color( 0, 0, 0, 0.596078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="ColorRect"]
margin_left = 24.0
margin_top = 96.0
margin_right = 442.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 1 )
text = "Email ou senha incorretos"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = 328.0
margin_top = 136.0
margin_right = 809.0
margin_bottom = 416.0
color = Color( 0, 0, 0, 0.596078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="ColorRect2"]
margin_left = 24.0
margin_top = 96.0
margin_right = 442.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 1 )
text = "Ocorreu um erro
Verifique sua conex√£o"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/criar = SubResource( 4 )
anims/entrar = SubResource( 5 )
anims/popErro = SubResource( 6 )
anims/popErro2 = SubResource( 7 )

[node name="tab" type="Sprite" parent="."]
position = Vector2( 160, 574.401 )
scale = Vector2( 0.019, 0.019 )
texture = ExtResource( 6 )

[node name="setas" type="Sprite" parent="."]
position = Vector2( 216, 574.401 )
scale = Vector2( 0.066, 0.066 )
texture = ExtResource( 4 )

[node name="enter" type="Sprite" parent="."]
position = Vector2( 460, 574.401 )
scale = Vector2( 0.015, 0.016 )
texture = ExtResource( 5 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
